@@ -96,7 +96,11 @@ LIB_CXXFLAGS:=$(LIB_CFLAGS)
 BROKER_CFLAGS:=${LIB_CFLAGS} -DVERSION="\"${VERSION}\"" -DTIMESTAMP="\"${TIMESTAMP}\"" -DWITH_BROKER
 CLIENT_CFLAGS:=${CFLAGS} -I../lib
 
-BROKER_LIBS:=-ldl
+ifeq ($(UNAME),FreeBSD)
+	BROKER_LIBS:=
+else
+	BROKER_LIBS:=-ldl
+endif
 LIB_LIBS:=
 PASSWD_LIBS:=
 
